@@ -1,3 +1,9 @@
+2008-09-30  Mike Kestner  <mkestner@novell.com>
+
+	* generator/EnumGen.cs:
+	* generator/InterfaceGen.cs:
+	* generator/StructBase.cs: fix build breakage in prev commit.
+
 2008-09-30  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* generator/CallbackGen.cs:
